--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "scripts/test"
+    "test": "./test"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
