--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,5 +34,5 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
 
       # run tests!
-      - run: sudo chmod u+x /usr/local/bin/yarn
+      - run: chmod +x ./test
       - run: yarn test
